[gd_scene load_steps=4 format=2]

[ext_resource path="res://ui/Interfaces/Debug_Interace/Control.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/GaramondPremrPro-Smbd.otf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 35
font_data = ExtResource( 2 )

[node name="BacktoMainMenu" type="Button"]
margin_right = 173.0
margin_bottom = 74.0
custom_fonts/font = SubResource( 1 )
text = "SALIR"
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="." to="." method="_on_BacktoMainMenu_pressed"]
