[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/fonts/advanced_pixel-7.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/fonts/GaramondPremrPro-Smbd.otf" type="DynamicFontData" id=2]
[ext_resource path="res://ui/Interfaces/Debug_Interace/Control.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 68
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 60
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 60
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 60
font_data = ExtResource( 2 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.66968
margin_top = 9.51367
margin_right = 2.66968
margin_bottom = 9.51367
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Column" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -712.0
margin_top = -396.0
margin_right = 712.0
margin_bottom = 396.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Column"]
margin_right = 1424.0
margin_bottom = 68.0
custom_fonts/font = SubResource( 1 )
text = "VPAZ - PRE-ALPHA v0.000001"
align = 1

[node name="HSeparator" type="HSeparator" parent="Column"]
margin_top = 72.0
margin_right = 1424.0
margin_bottom = 76.0

[node name="TestField" type="Button" parent="Column"]
margin_top = 80.0
margin_right = 1424.0
margin_bottom = 165.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
text = "Nivel 1: Ciudad"

[node name="HSeparator3" type="HSeparator" parent="Column"]
margin_top = 169.0
margin_right = 1424.0
margin_bottom = 173.0

[node name="Label2" type="Label" parent="Column"]
margin_top = 177.0
margin_right = 1424.0
margin_bottom = 245.0
custom_fonts/font = SubResource( 1 )
text = "MINIJUEGOS"
align = 1

[node name="HSeparator2" type="HSeparator" parent="Column"]
margin_top = 249.0
margin_right = 1424.0
margin_bottom = 253.0

[node name="Memorama" type="Button" parent="Column"]
margin_top = 257.0
margin_right = 1424.0
margin_bottom = 343.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 3 )
text = "Memorama"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Flappy Bird" type="Button" parent="Column"]
margin_top = 347.0
margin_right = 1424.0
margin_bottom = 433.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 4 )
text = "\"Flappy Bird\""
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rompecabezas" type="Button" parent="Column"]
margin_top = 437.0
margin_right = 1424.0
margin_bottom = 522.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 4 )
text = "Rompecabezas"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lluvia de basura" type="Button" parent="Column"]
margin_top = 526.0
margin_right = 1424.0
margin_bottom = 612.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 4 )
text = "Lluvia de basura"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bolita" type="Button" parent="Column"]
margin_top = 616.0
margin_right = 1424.0
margin_bottom = 702.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 4 )
text = "¿Dónde está la bolita?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Árbol" type="Button" parent="Column"]
margin_top = 706.0
margin_right = 1424.0
margin_bottom = 792.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 4 )
text = "Árbol que nace torcido..."
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Column/TestField" to="." method="_on_TestField_pressed"]
[connection signal="pressed" from="Column/Memorama" to="." method="_on_Memorama_pressed"]
[connection signal="pressed" from="Column/Flappy Bird" to="." method="_on_Flappy_Bird_pressed"]
[connection signal="pressed" from="Column/Rompecabezas" to="." method="_on_Rompecabezas_pressed"]
[connection signal="pressed" from="Column/Lluvia de basura" to="." method="_on_Lluvia_de_basura_pressed"]
[connection signal="pressed" from="Column/Bolita" to="." method="_on_Bolita_pressed"]
[connection signal="pressed" from="Column/Árbol" to="." method="_on_rbol_pressed"]
